Fixed: Selection background of editor wasn't visible

--- a/src/client/less/view.less
+++ b/src/client/less/view.less
@@ -41,4 +41,9 @@ footer {
 
 #editor-wrapper {
   font-size: 14px;
+
+  .CodeMirror-selected {
+    // The original selection background of the railscasts theme is nearly not visible
+    background: lighten(#2b2b2b, 10%) !important;
+  }
 }
